# Plannic

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
api/app/: main.py
api/app/api/: __init__.py
api/app/core/: settings.py
backend/: Dockerfile  README.md  entry.sh  main.py  scheduler.py
backend/alembic/: env.py
backend/alembic/versions/: 0b529b8d1265_init.py  2826ff1f140b_make_a_few_collumns_nullable.py  46dd4daa7a64_test.py  4c1322c2cd5f_load_emojis.py  5179b1f7df9d_replace_type_string_with_date_in_periods.py  77d859dab2c9_init.py  8d8ca33f8765_lesson_time_column_drop.py  9bae2ffcd4ce_times_rework.py  bf95742b900b_preload_lesson_emojis_table.py  f71246b047c9_create_hashes_table.py
backend/api/: __init__.py  schedule.py  users.py   auth.py
backend/app/: main.py  scheduler.py
backend/app/api/: schedule.py
backend/app/core/: settings.py
backend/app/db/: session.py
backend/app/models/: __init__.py  classes.py  enums.py  lessons.py  schedule.py  teachers.py
backend/app/services/: schedule_parsing.py
backend/core/: security.py  settings.py
backend/db/: __init__.py  base.py  redis_client.py  session.py
backend/models/: __init__.py  classes.py  enums.py  hashes.py  lessons.py  schedule.py  subjects.py  teachers.py  times.py
backend/models/schedule/: __init__.py  enums.py  schedule_model.py  teachers.py
backend/repositories/: __init__.py  parser_repo.py  schedule_repo.py  user_repo.py
backend/schemas/: orm.py  schedule.py  user.py
backend/services/: __init__.py  schedule_service.py  user_service.py
bot/: Dockerfile  main.py
(+9 files in other folders)
